--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,4 +24,4 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Build docker image  
-      run: docker build --tag java-docker .
+      run: docker build -f dockerfile --tag java-docker .
