--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,5 +23,10 @@ jobs:
         distribution: 'adopt'
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: docker login
+      env:
+         Docker_USERR: ${{ secrets.docker_user}}
+         Docker_PASSWORD: ${{ secrets.docker_password}}
+      run: docker login -u $docker_user -p $docker_password
     - name: Build docker image  
       run: docker build -f dockerfile --tag java-docker .
