--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: docker login
-      run: docker login -u sudeesh -p Nlr@2021 https://hub.docker.com
+      run: docker login -u sudeesh -p Nlr@2021 
     - name: Build docker image  
       run: docker build -f dockerfile --tag java-docker .
       
